# Vex

./: .gitignore  Cargo.toml  LICENSE-MIT  PLAN.md  README.md  README_RU.md  docker-compose.observability.yml  prometheus.yml  vex.toml
config/: protocol_ids.toml  vex-node-1.toml  vex-node-2.toml
docs/wiki/: Anti-Bot-en.md  Anti-Bot-ru.md  Changelog-en.md  Changelog-ru.md  Clustering-en.md  Clustering-ru.md  Comparison-en.md  Comparison-ru.md  Configuration-en.md  Configuration-ru.md  Getting-Started-en.md  Getting-Started-ru.md  Home-en.md  Home-ru.md  Home.md  Observability-en.md  Observability-ru.md  Plugin-API-Reference-en.md  Plugin-API-Reference-ru.md  Plugin-Development-en.md  Plugin-Development-ru.md  _Sidebar.md
examples/hello_plugin/: Cargo.toml  plugin.toml
examples/hello_plugin/src/: lib.rs
grafana/: vex-dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
scripts/: reload_hot_apply_check.py  run_bench_with_mem.py  test_antibot.py  v1_smoke_checks.py
src/: admin.rs  analytics.rs  auth_circuit.rs  backend.rs  config.rs  crypto.rs  event_bus.rs  health.rs  limiter.rs  main.rs  mc.rs  memory.rs  metrics.rs  plugin_host.rs  protocol_map.rs  reputation.rs  server.rs  session_registry.rs  shutdown.rs  state.rs  telemetry.rs  transfer.rs
src/cluster/: local_cluster.rs  mod.rs  node_registry.rs  pubsub.rs  redis_cluster.rs  shared_state.rs
src/sdk/: api.rs  event.rs  message.rs  meta.rs  mod.rs  player.rs  server.rs
vex-sdk/: CHANGELOG.md  Cargo.toml  README.md
vex-sdk/src/: api.rs  config.rs  event.rs  lib.rs  message.rs  meta.rs  player.rs  plugin_meta.rs  prelude.rs  scheduler.rs  server.rs
