[package]
name = "Vex"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "mock_backend"
path = "src/bin/mock_backend.rs"

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
axum = "0.8"
aes = "0.8"
bytes = "1.10"
cfb-mode = "0.8"
clap = { version = "4", features = ["derive"] }
dashmap = "6.1"
flate2 = "1.1"
hdrhistogram = "7"
hmac = "0.12"
http = "1.3"
prometheus = "0.14"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rsa = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v3"] }

[dev-dependencies]
wiremock = "0.6"
